update 2023-04-12-Garbage-Collection-in-Java.md, 2023-11-19-Singleton-Pattern-in-Java.md and 2024-03-15-SSH-Client.md